--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
     "jsonwebtoken": "^8.5.1",
+    "material-table": "^1.69.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
